# Acces-Campus

./: Acces-Campus.sln
BDDEmile/: DictionnaireDonnee.docx  DocumentationAPIcode.yaml  DocumentationAPIpropre.html  donneBase.csv  index.html  student-fbe-BDD-1.0.0-resolved.yaml  swagger-acces-campus.html
BDDEmile/Application/BackendBDD/: .dockerignore  .gitignore  CMakeLists.txt  config.json  config.yaml  docker-compose.yml  main.cc
BDDEmile/Application/BackendBDD/Logique/: BadgeLogique.cpp  BadgeLogique.h  ClasseLogique.cpp  ClasseLogique.h  CoursLogique.cpp  CoursLogique.h  GestionCoursTemporelle.cpp  GestionCoursTemporelle.h  RetardAbsenceLogique.cpp  RetardAbsenceLogique.h  SalleLogique.cpp  SalleLogique.h  UtilisateurLogique.cpp  UtilisateurLogique.h
BDDEmile/Application/BackendBDD/controllers/: BAEController.cpp  BAEController.h  ControlleurPSW.cpp  ControlleurPSW.h  PEAController.cpp  PEAController.h  PGSController.cpp  PGSController.h  PSWController.cpp  PSWController.h  SalleController.cpp  SalleController.h
BDDEmile/Application/BackendBDD/dao/: BadgeDAO.cpp  BadgeDAO.h  ClasseDAO.cpp  ClasseDAO.h  CoursDAO.cpp  CoursDAO.h  PresenceAbsenceCoursDAO.cpp  PresenceAbsenceCoursDAO.h  RetardAbsenceDAO.cpp  RetardAbsenceDAO.h  SalleDAO.cpp  SalleDAO.h  UtilisateurDAO.cpp  UtilisateurDAO.h
BDDEmile/Application/BackendBDD/docker_backend/: Dockerfile
BDDEmile/Application/BackendBDD/docker_bdd/: Dockerfile  aSchemaBDDv12.sql  bcommandesql.sql  ccommandeuser.sql
BDDEmile/Application/BackendBDD/filters/: FiltreJWT.cpp  FiltreJWT.h
BDDEmile/Application/BackendBDD/models/: AbsenceCours.cc  AbsenceCours.h  Badge.cc  Badge.h  Classe.cc  Classe.h  Cours.cc  Cours.h  CoursUtilisateur.cc  CoursUtilisateur.h  Historique.cc  Historique.h  Presence.cc  Presence.h  PresenceCours.cc  PresenceCours.h  Reservation.cc  Reservation.h  Retardabsence.cc  Retardabsence.h  Salle.cc  Salle.h  Utilisateur.cc  Utilisateur.h  model.json
BDDEmile/Application/BackendBDD/resultat/: StructResultat.h
BDDEmile/Application/BackendBDD/test/: CMakeLists.txt
BDDEmile/DocumentationAPI/: DocumentationAPI.yaml  LisibleDocumentationAPI.html
BDDEmile/Swagger/dynamic-html-documentation-generated (1)/docs/: index.html
BDDEmile/Swagger/dynamic-html-documentation-generated (1)/docs/models/: Absence.html  Badges.html  Badges_badgeid_body.html  Bae_scanner_badge_body.html  Erreur_code.html  Historique_utilisateur.html  Psw_reserver_salle_body.html  Reservation.html  Salle.html  Token_jwt.html  UserLogin.html  Utilisateur.html
BDDEmile/Swagger/dynamic-html-documentation-generated (1)/docs/operations/: BAEApi.html  PEAApi.html  PGSApi.html  PSWApi.html
PGSMael/: Api_PGS  GestionBadge.cpp  Interface.cpp  Interface.h  MyForm.h  Project_Final.vcxproj  Project_Final.vcxproj.filters
PGSMael/AccesCampusPGS/: AccesCampusPGS.csproj  Form1.Designer.cs  Form1.cs  Program.cs
PGSMael/AccesCampusPGS/Models/: GestionBadge.cs
PGSMael/AccesCampusPGS/Services/: Api_PGS  CommunicationServeur.cs  LecteursNFC.cs
PSWMathis/: DOSSIER DES CHOIX TECHNIQUES PSW-2.docx  caracteristique psw + bdd.docx
PSWMathis/acces-campus/: app.js  index.html  style.css
PSWMathis/acces-campus/nginx-1.28.2/conf/: nginx.conf
PSWMathis/acces-campus/nginx-1.28.2/html/: app.js  index.html  style.css
PSWMathis/server/: db.json  nginx.conf  package-lock.json  package.json  routes.json
